--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,12 @@
 
 
-backports.weakref==1.0.post1
 bcrypt==4.1.2
 
-brotlipy==0.7.0
-certifi==2023.7.22
 
-charset-normalizer==3.2.0
-click==7.1.2
-clyent==1.2.2
-
-
-distlib==0.3.7
-dnspython==2.7.0
-docutils==0.20.1
-
-filelock==3.12.2
-
-idna==3.4
-
-Kivy==2.2.1
-Kivy-Garden==0.1.5
-kivymd==1.1.1
-MarkupSafe==2.1.5
-
-mysql-connector-python==8.1.0
-navigator-updater==0.3.0
-
-numpy==1.24.3
-pandas==2.0.1
-
-passlib==1.7.4
-
-Pillow==10.0.0
-platformdirs==3.10.0
-ply==3.11
-
-protobuf==4.21.12
-
-pycosat==0.6.3
-Pygments==2.16.1
-pymongo==4.11.3
-
-PyQt5-sip==12.11.0
-PyQt6==6.1.0
-pyqt6-plugins==6.1.0.2.2
-PyQt6-Qt6==6.4.0
-PyQt6-sip==13.4.0
-pyqt6-tools==6.1.0.3.2
-
-python-dotenv==1.0.0
-PyYAML==6.0
-qt6-applications==6.1.0.2.2
-qt6-tools==6.1.0.1.2
-requests==2.31.0
-tzdata==2023.3
-urllib3==2.0.4
-virtualenv==20.24.2
-webencodings==0.5.1
 Werkzeug==3.0.1
+kivy==2.2.1
+kivymd==1.1.1
+pymongo==4.7.2
+python-dotenv==1.0.0
+pandas==2.0.1
+numpy==1.24.3
